--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="description" content="Farm Management"/>
+    <meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+    <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
