--- a/web/index.html
+++ b/web/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8"/>
     <meta name="description" content="Farm Management"/>
     <meta name="theme-color" content="#ffffff">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
-    <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
+    <link href="/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16"/>
+    <link href="/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32"/>
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png"/>
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
