--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#ffffff">
     <link href="/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16"/>
     <link href="/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32"/>
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png"/>
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
